# lowpoly

./: Cargo.toml  README.md
benches/: benchmarks.rs  lowpoly_benches.rs
src/: lib.rs  point.rs  sampling.rs  shape.rs  style_builder.rs
tests/: tests.rs
