[package]
name = "geometrize"
version = "0.1.0"
edition = "2024"

[dependencies]
image = {version = "0.25.8", default-features = false}
imageproc = {version = "0.26", default-features = false}
libblur = { version = "0.23", default-features = false, features = ["image"] }
rand = "0.10"
rayon = "1.10"
spade = "2.0"
thiserror = "2.0"
num-traits = "0.2"


[dev-dependencies]
image = {version = "0.25.8", default-features = false, features = ["png"]}
criterion = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
