[package]
name = "geometrize"
version = "0.1.0"
edition = "2024"
description = "Transform images into geometric art."
license = "MIT OR Apache-2.0"
authors = ["jac0-b"]
repository = "https://github.com/jac0-b/geometrize"
homepage = "https://github.com/jac0-b/geometrize"
documentation = "https://docs.rs/geometrize"
readme = "README.md"
keywords = ["geometry", "image"]
categories = ["multimedia::images"]
exclude = ["benches/", "tests/", ".github/", "images/"]
rust-version = "1.88"

[dependencies]
image = { version = "0.25.8", default-features = false }
imageproc = { version = "0.26", default-features = false }
libblur = { version = "0.23", default-features = false, features = ["image"] }
rand = "0.10"
rayon = "1.10"
spade = "2.0"
thiserror = "2.0"
num-traits = "0.2"
rustc-hash = "2.1"

[dev-dependencies]
image = "0.25.8"
criterion = "0.8"
sanitize-filename = "0.6.0"
reqwest = { version = "0.13.3", features = ["blocking"] }
thousands = "0.2.0"

[profile.dev]
opt-level = 3
debug = true

[[bench]]
name = "benchmarks"
harness = false

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
